{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 175,
  "lineage": "55dff6c6-9598-7590-37f8-c31c023dcb4c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d929ac8893c382f",
            "arn": "arn:aws:ec2:eu-west-2:058264181181:instance/i-0ca9b28bbce98866a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca9b28bbce98866a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-08d6d6a341380bfbb"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d6d6a341380bfbb",
            "private_dns": "ip-172-20-16-10.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.16.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e213734524053d59",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4766a8a9f4a0808",
            "tags": {
              "Name": "Ansible-1"
            },
            "tags_all": {
              "Name": "Ansible-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0271645769c22a3de"
            ]
          },
          "dependencies": [
            "aws_network_interface.ansible_network_interface",
            "aws_security_group.ansible_sg",
            "aws_subnet.pub_subnet",
            "aws_vpc.beneficient_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d929ac8893c382f",
            "arn": "arn:aws:ec2:eu-west-2:058264181181:instance/i-092dee3e9fe5b1aa7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092dee3e9fe5b1aa7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0ac60d7947dfb0172"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ac60d7947dfb0172",
            "private_dns": "ip-172-20-16-20.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.16.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0df1304acc9756ce8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4766a8a9f4a0808",
            "tags": {
              "Name": "Ansible-2"
            },
            "tags_all": {
              "Name": "Ansible-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0271645769c22a3de"
            ]
          },
          "dependencies": [
            "aws_network_interface.ansible_network_interface",
            "aws_security_group.ansible_sg",
            "aws_subnet.pub_subnet",
            "aws_vpc.beneficient_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d929ac8893c382f",
            "arn": "arn:aws:ec2:eu-west-2:058264181181:instance/i-07dec2c5a832ccd03",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07dec2c5a832ccd03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0362dbdd93aef75a5"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0362dbdd93aef75a5",
            "private_dns": "ip-172-20-16-30.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.16.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-027d0cde56839ca88",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4766a8a9f4a0808",
            "tags": {
              "Name": "Ansible-3"
            },
            "tags_all": {
              "Name": "Ansible-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0271645769c22a3de"
            ]
          },
          "dependencies": [
            "aws_network_interface.ansible_network_interface",
            "aws_security_group.ansible_sg",
            "aws_subnet.pub_subnet",
            "aws_vpc.beneficient_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "beneficient_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264181181:internet-gateway/igw-0c116426fa9a07b63",
            "id": "igw-0c116426fa9a07b63",
            "owner_id": "058264181181",
            "tags": {
              "Name": "beneficient-igw"
            },
            "tags_all": {
              "Name": "beneficient-igw"
            },
            "vpc_id": "vpc-0bbedddb08d0a26eb"
          },
          "dependencies": [
            "aws_vpc.beneficient_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ansible_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264181181:network-interface/eni-08d6d6a341380bfbb",
            "attachment": [
              {
                "attachment_id": "eni-attach-0f95757a4d3a48468",
                "device_index": 0,
                "instance": "i-0ca9b28bbce98866a"
              }
            ],
            "id": "eni-08d6d6a341380bfbb",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:b9:b7:9a:d8:07",
            "owner_id": "058264181181",
            "private_ip": "172.20.16.10",
            "private_ip_list": [
              "172.20.16.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.20.16.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0271645769c22a3de"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4766a8a9f4a0808",
            "tags": {
              "Name": "beneficient-ansible_network_interface"
            },
            "tags_all": {
              "Name": "beneficient-ansible_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.ansible_sg",
            "aws_subnet.pub_subnet",
            "aws_vpc.beneficient_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264181181:network-interface/eni-0ac60d7947dfb0172",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ae7f4e6c41bb1862",
                "device_index": 0,
                "instance": "i-092dee3e9fe5b1aa7"
              }
            ],
            "id": "eni-0ac60d7947dfb0172",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:9c:bf:66:44:71",
            "owner_id": "058264181181",
            "private_ip": "172.20.16.20",
            "private_ip_list": [
              "172.20.16.20"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.20.16.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0271645769c22a3de"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4766a8a9f4a0808",
            "tags": {
              "Name": "beneficient-ansible_network_interface"
            },
            "tags_all": {
              "Name": "beneficient-ansible_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.ansible_sg",
            "aws_subnet.pub_subnet",
            "aws_vpc.beneficient_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264181181:network-interface/eni-0362dbdd93aef75a5",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c2fc1b01d401c55c",
                "device_index": 0,
                "instance": "i-07dec2c5a832ccd03"
              }
            ],
            "id": "eni-0362dbdd93aef75a5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:cb:5e:30:97:67",
            "owner_id": "058264181181",
            "private_ip": "172.20.16.30",
            "private_ip_list": [
              "172.20.16.30"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.20.16.30"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0271645769c22a3de"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4766a8a9f4a0808",
            "tags": {
              "Name": "beneficient-ansible_network_interface"
            },
            "tags_all": {
              "Name": "beneficient-ansible_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.ansible_sg",
            "aws_subnet.pub_subnet",
            "aws_vpc.beneficient_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "beneficient_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264181181:route-table/rtb-08d33ee31f73759a0",
            "id": "rtb-08d33ee31f73759a0",
            "owner_id": "058264181181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c116426fa9a07b63",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "beneficient-rt"
            },
            "tags_all": {
              "Name": "beneficient-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbedddb08d0a26eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.beneficient_igw",
            "aws_vpc.beneficient_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "beneficient_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f552b3bbd2c657fa",
            "route_table_id": "rtb-08d33ee31f73759a0",
            "subnet_id": "subnet-0b4766a8a9f4a0808"
          },
          "dependencies": [
            "aws_internet_gateway.beneficient_igw",
            "aws_route_table.beneficient_rt",
            "aws_subnet.pub_subnet",
            "aws_vpc.beneficient_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264181181:security-group/sg-0271645769c22a3de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0271645769c22a3de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible_sg",
            "name_prefix": "",
            "owner_id": "058264181181",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbedddb08d0a26eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.beneficient_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264181181:subnet/subnet-0b4766a8a9f4a0808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4766a8a9f4a0808",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264181181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "beneficient-pub_subnet"
            },
            "tags_all": {
              "Name": "beneficient-pub_subnet"
            },
            "vpc_id": "vpc-0bbedddb08d0a26eb"
          },
          "dependencies": [
            "aws_vpc.beneficient_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "beneficient_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264181181:vpc/vpc-0bbedddb08d0a26eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/18",
            "default_network_acl_id": "acl-02bf5938490d69b0a",
            "default_route_table_id": "rtb-033cdd8265b0b1c27",
            "default_security_group_id": "sg-0c05bd38b685e5d4d",
            "dhcp_options_id": "dopt-0c29007ca2839c092",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbedddb08d0a26eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-033cdd8265b0b1c27",
            "owner_id": "058264181181",
            "tags": {
              "Name": "beneficient-vpc"
            },
            "tags_all": {
              "Name": "beneficient-vpc"
            }
          }
        }
      ]
    }
  ]
}